# frida-ios-hook

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  WIKI.md  frida-ios-hook  hook.py  hooking.js  ioshook_test.py  requirement.txt  requirements.txt  return_value.js  setup.cfg  setup.py  trace_class.js  trace_function.js  trace_method.js
.github/: FUNDING.yml
.github/workflows/: codeql-analysis.yml  python-publish.yml  snyk-infrastructure-analysis.yml  yang-code-review.yml
core/: hook.py
core/utils/: __init__.py
frida-ios-hook/: hook.py  hooking.js  ioshook  return_value.js  trace_class.js  trace_method.js  wiki.md
frida-ios-hook/core/: hook.conf.default  hook.json  hook.json.env  hook.py
frida-ios-hook/frida-scripts/: README.md  backtrace.js  bypass-flutter-ssl.js  (+45 more)
frida-scripts/: bypass-ssl-ios13.js  find-all-methods-all-classes.js  find-specific-method.js  flutter_trace_function.js  hook-all-methods-of-specific-class.js  hook-specific-method-of-class.js  ios-app-static-analysis.js  ios-intercept-crypto-2.js  ios-intercept-crypto.js  pasteboard-monitoring.js  read-nsuserdefaults.js  show-all-methods-of-specific-class.js  show-argument-type-count-and-return-value-type.js  show-instance-variables-for-specific-class.js  show-modify-function-arguments.js  show-modify-method-return-value.js  show_binarycookies.js
lib/: __init__.py  checkversion.py  dump.py
method/: bypass_jailbreak.js  bypass_ssl.js  intercept_url_request.js  static_analysis.js  url_request.js
methods/: dump.js
module/: listapp.py
src/: hook.py
(+35 files in other folders)
