# Inside of setup.cfg
[metadata]
name = frida-ios-hook
version = 3.5
description = A tool that helps you can easy using frida. It support script for trace classes, functions, and modify the return values of methods on iOS platform.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/noobpk/frida-ios-hook
author = noobpk
author_email = ltp.noobpk@gmail.com
license = MIT
license_file = LICENSE
